	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix low memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Fix the HUD clock showing the wrong hour randomly (#114).
	TDO: Fix the world map bakcground not being loaded sometimes.

Alpha 1.17.1 (//23) "Needlefish Update":
	TDO: Remove work *.xcf and *.psd files from the data files.
	TDO: Add the ability to switch shaders through the options menu (#119).
	TDO: Add night entities to maps (#67).
	TDO: Add hook entities to trees (#103).
	TDO: Finish the remaining houses (#104).
	TDO: Add remaining inside maps coordinates (#105).
	TDO: Add items treasure and inventory missing dialogues (#9).
	TDO: Fix victory animation not being synchronised with Link movement (#10).
	TDO: Clean up unused files (#98).
	TDO: Fix Link being invisible after fighting boss (#16).
	TDO: Fix missing animations for other tunics (#47).
	TDO: Update the title screen (#50).
	TDO: Change the Master Sword sprite on the title screen (#50).
	TDO: Change all the enemies in the Hyrule Field (#81).
	TDO: Fix cursor moving too fast with analog controller in menus (#82).
	TDO: Add a falling animation for enemies (#84).
	TDO: Write the game's walkthrough (#85).
	TDO: Modify "field_music_manager" music updating and field map scripts in order not to reset the music on game overs (#48).

Alpha 1.17.2 (//23) "Needlefish Update":
	TDO: Add maps.
	TDO: Add food.
	TDO: Fix Link being able to run on water right after jumping from a cliff (#18).
	TDO: Rename owl entities according to main quest steps (#19).
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix the Book of Mudora.
	TDO: Slightly change HUD icons.
	TDO: Add file licenses to the project database (#106).
	TDO: Add a HUD version for timers (#36).
