@@ -7332,7 +7332,7 @@ stairs{
 crystal_block{
   layer = -1,
   x = 1432,
-  y = 1072,
+  y = 1080,
   width = 32,
   height = 16,
   subtype = 1,
@@ -8021,7 +8021,7 @@ custom_entity{
 crystal_block{
   layer = -1,
   x = 1448,
-  y = 1040,
+  y = 1048,
   width = 16,
   height = 32,
   subtype = 1,
@@ -25154,6 +25154,51 @@ tile{
   pattern = "door_stairs.spiral_up.1",
 }
 
+tile{
+  layer = 0,
+  x = 1728,
+  y = 1016,
+  width = 8,
+  height = 32,
+  pattern = "floor_border.2",
+}
+
+tile{
+  layer = 0,
+  x = 1784,
+  y = 1016,
+  width = 8,
+  height = 32,
+  pattern = "floor_border.2",
+}
+
+tile{
+  layer = 0,
+  x = 1736,
+  y = 1016,
+  width = 48,
+  height = 8,
+  pattern = "floor_border.2",
+}
+
+tile{
+  layer = 0,
+  x = 1736,
+  y = 1040,
+  width = 48,
+  height = 8,
+  pattern = "floor_border.2",
+}
+
+tile{
+  layer = 0,
+  x = 1736,
+  y = 1024,
+  width = 48,
+  height = 16,
+  pattern = "floor_small.2",
+}
+
 dynamic_tile{
   name = "tile_20_switch_b_1",
   layer = 0,
@@ -26420,8 +26465,8 @@ switch{
 switch{
   name = "switch_15_door_4",
   layer = 0,
-  x = 744,
-  y = 712,
+  x = 752,
+  y = 688,
   subtype = "solid",
   sprite = "entities/switches/solid_switch",
   sound = "objects/switch_crystal_hit",
@@ -26676,12 +26721,6 @@ teletransporter{
   height = 16,
   destination_map = "dungeons/5/0f",
   destination = "from_1f_4",
-}
-
-crystal{
-  layer = 0,
-  x = 1952,
-  y = 1101,
 }
 
 switch{
@@ -27025,6 +27064,65 @@ door{
   opening_condition = "dungeon_5_small_keys",
   opening_condition_consumed = true,
   cannot_open_dialog = "_cannot_open_without_small_key",
+}
+
+chest{
+  name = "chest_30_rupees",
+  layer = 0,
+  x = 1760,
+  y = 1037,
+  treasure_name = "rupee",
+  treasure_variant = 4,
+  treasure_savegame_variable = "dungeon_5_1f_30_rupees",
+  sprite = "entities/chests/chest_LttP",
+}
+
+sensor{
+  name = "sensor_30_door_1",
+  layer = 0,
+  x = 1648,
+  y = 1069,
+  width = 16,
+  height = 32,
+}
+
+sensor{
+  name = "sensor_30_door_2",
+  layer = 0,
+  x = 1752,
+  y = 1157,
+  width = 32,
+  height = 16,
+}
+
+enemy{
+  name = "enemy_30_1",
+  layer = 0,
+  x = 1712,
+  y = 1069,
+  direction = 0,
+  breed = "dungeons/gibdo",
+  treasure_name = "random_mountains",
+}
+
+enemy{
+  name = "enemy_30_2",
+  layer = 0,
+  x = 1760,
+  y = 1109,
+  direction = 0,
+  breed = "dungeons/gibdo",
+  treasure_name = "random_mountains",
+}
+
+enemy{
+  name = "enemy_30_3",
+  layer = 0,
+  x = 1808,
+  y = 1069,
+  direction = 0,
+  breed = "dungeons/gibdo",
+  treasure_name = "random_mountains",
 }
 
 tile{
@@ -28064,15 +28162,6 @@ tile{
 
 tile{
   layer = 2,
-  x = 1760,
-  y = 1048,
-  width = 16,
-  height = 16,
-  pattern = "490",
-}
-
-tile{
-  layer = 2,
   x = 1448,
   y = 672,
   width = 16,
@@ -28105,15 +28194,6 @@ tile{
   width = 16,
   height = 16,
   pattern = "534",
-}
-
-tile{
-  layer = 2,
-  x = 1744,
-  y = 1064,
-  width = 24,
-  height = 24,
-  pattern = "535",
 }
 
 tile{
