@@ -408,7 +408,8 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
 	TDO: Update the statistics menu with treasures from the Excel file (#46).
 	TDO: Fix the HUD clock showing the wrong hour randomly (#114).
-	TDO: Fix the world map bakcground not being loaded sometimes.
+	TDO: Fix the world map background not being loaded sometimes.
+	TDO: Fix missing sword shield sprites crash.
 
 Alpha 1.17.1 (//23) "Needlefish Update":
 	TDO: Remove work *.xcf and *.psd files from the data files.
